# Soundrobe

./: .env.example  .gitignore  .rulesify.toml  AGENTS.md  CONTEXT.md  Justfile  LICENSE  PLAN-lyrics-parallel.md  PLAN.md  README.md  config.example.yaml  coverage.json  pyproject.toml  slice_cue.py
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-code-reviewer.md  gsd-codebase-mapper.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-writer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-pattern-mapper.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-auditor.md  gsd-ui-checker.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-phase-boundary.sh  gsd-read-guard.js  gsd-read-injection-scanner.js  gsd-session-state.sh  gsd-statusline.js  gsd-validate-commit.sh
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.codex/agents/: gsd-ai-researcher.md  gsd-ai-researcher.toml  gsd-debugger.md  gsd-debugger.toml  gsd-domain-researcher.md  gsd-domain-researcher.toml  gsd-eval-auditor.md  gsd-eval-auditor.toml  gsd-eval-planner.md  gsd-eval-planner.toml  gsd-executor.md  gsd-executor.toml  gsd-framework-selector.md  gsd-framework-selector.toml  gsd-intel-updater.md  gsd-intel-updater.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-user-profiler.md  gsd-user-profiler.toml  gsd-verifier.md  gsd-verifier.toml
.codex/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-prompt-guard.js  gsd-read-injection-scanner.js  gsd-statusline.js  gsd-update-banner.js  gsd-workflow-guard.js
.github/workflows/: tauri.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  per-track-artist-credits.md  v1.0-MILESTONE-AUDIT.md  v2-electon-architecture.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/: phase-1-plan.md  phase-2-plan.md  phase-3-electron-auto-tag.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-ui-plan.md
.planning/research/: architecture.md  features.md  pitfalls.md  stack.md
.rulesify/: registry.toml
docs/: HANDOFF.md  PLAN_album_verification.md  auto-tag-matching-logic.md  dataset-handoff.md  release-checklist.md
docs/handoffs/: 2026-05-17-duplicate-track-number-fix.md  2026-05-18-sequential-track-renumbering-fix.md
docs/plans/: 2026-05-10-5566-fixes-plan.md  2026-05-10-test-hardening-design.md  2026-05-10-test-hardening-plan.md
frontend/: APE_HANDOFF.md  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
frontend/data/: artist-aliases.json
frontend/e2e/: assistant-organize.electron.spec.ts  assistant-paths.electron.spec.ts  audit.electron.spec.ts  convert.electron.spec.ts  extra-tags.electron.spec.ts  number-tracks.electron.spec.ts
frontend/e2e-tauri/: fixtures.ts  live-cover-picker.spec.ts  live-openrouter.spec.ts  shell.spec.ts  workflows.spec.ts
frontend/electron/: better-sqlite3.d.ts  main.ts  preload.ts  tag-worker.ts
frontend/src/: App.tsx  (+3 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.wdio.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: error.rs  lib.rs  main.rs
frontend/src-tauri/src/commands/: assistant.rs  assistant_tools.rs  audit.rs  auto_tag.rs  configuration.rs  conversation.rs  covers.rs  dataset.rs  debug.rs  directories.rs  library.rs  lyrics.rs  meta.rs  mod.rs  mutations.rs  organizer.rs  shell.rs  tasks.rs  track_matcher.rs  tracks.rs
frontend/src-tauri/src/infra/: aliases.rs  artwork.rs  encoding.rs  fs.rs  http.rs  logging.rs  mod.rs  openrouter.rs  sqlite.rs  tag_io.rs
frontend/src-tauri/src/state/: assistant.rs  audit.rs  config.rs  conversation.rs  mod.rs  providers.rs  quit_guard.rs  sqlite.rs  tasks.rs  window_state.rs  write_queue.rs
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
plans/: 100-file-performance-fix.md  ai-assistant-roadmap.md  auto-save-undo-cmdz.md  convert-regex-preview.md  dataset-hitrate.md  fix-agent-loop-degradation.md  fix-track-numbers-composite-tool.md  llm-tag-correction-eval.md  llm-tag-parsing-redesign.md
reports/: flac-corruption-report.html
scripts/: aggregate-checkpoint.js  build-flac-test-corpus.js  cue2flac.sh  dsf-to-flac.sh  fix-flac-metadata.js  fix-medium-flac-tracks.js  generate-corruption-report.js  slice-isos.sh  unrar-all.sh
tests/: conftest.py  test_album_workflow.py  test_aliases.py  test_artist_workflow.py  test_audio.py  test_audio_validation.py  test_batch_workflow.py  test_beets_candidates.py  test_beets_client.py  test_beets_integration.py  test_cache.py  test_chinese_script.py  test_cli.py  test_cli_e2e.py  test_command_entry_points.py  test_compilations.py  test_config.py  test_cover_art.py  test_dataset_cli.py  test_dataset_commands.py  test_dataset_download.py  test_dataset_index.py  test_dataset_write.py  test_discogs_cascade.py  test_discogs_client.py  test_discogs_cover.py  test_distribution.py  test_edge_cases.py  test_fallback.py  test_ffprobe_integration.py  test_fixtures.py  test_folder_cleanup.py  test_formats.py  test_health_report.py  test_health_report_integration.py  test_interactive_workflow.py  test_llm_client.py  test_llm_cost.py  test_llm_fallback.py  test_llm_prompts.py  (+25 more)
(+2417 files in other folders)
