[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "auto-tagger"
version = "0.1.0"
description = "Intelligent audio file tagging CLI tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Auto Tagger Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cli", "audio", "tagging", "metadata", "music"]

dependencies = [
    "beets>=2.0.0",
    "click>=8.1.0",
    "httpx>=0.28.0",
    "musicbrainzngs>=0.7",
    "mutagen>=1.47.0",
    "opencc>=1.1",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
auto-tag = "auto_tagger.cli:main"

[project.urls]
Homepage = "https://github.com/auto-tagger/auto-tagger"
Repository = "https://github.com/auto-tagger/auto-tagger.git"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_tagger"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "needs_ffmpeg: tests that require ffmpeg and ffprobe",
    "needs_beets: tests that require the beets CLI",
    "needs_rgain: tests that require rgain3 or loudgain",
    "network: tests that require network access",
]
