[package]
name = "soundrobe"
version = "0.1.0"
description = "Desktop audio file tag editor — Tauri 2 shell (Electron migration)"
authors = ["Soundrobe Contributors"]
license = "MIT"
homepage = "https://github.com/ydeng11/Soundrobe"
# Lofty 0.24 (the mandated Rust tag-I/O crate) requires Rust 1.85.
rust-version = "1.85"
edition = "2021"

[lib]
name = "soundrobe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-clipboard-manager = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
dirs = "6"
# Reader plus format-by-format writer cores, enabled only behind differential
# media-safety tests before command exposure.
lofty = "0.24.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
chardetng = "0.1"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4"] }
unicode-normalization = "0.1"
opencc-fmmseg = "0.11"
sha2 = "0.10"
regex = "1"
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

# Infrastructure crates — pinned to the versions locked by `Cargo.lock` and
# introduced per migration slice. Listed here so the toolchain is recorded;
# each slice enables only what it needs to keep SLOC change review bounded.
#   opencc-fmmseg = "0.11"                                      # pure Rust OpenCC SC/TC conversion
#   futures    = "0.3"                                           # provider/blocking task orchestration

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[features]
# Production build hides the embedded dev server URL and ships the packaged
# frontend from `frontendDist`. Default is the dev shell.
default = []
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]
